--- a/9ecomv3/package.json
+++ b/9ecomv3/package.json
@@ -22,6 +22,7 @@
     "@ionic-native/in-app-browser": "^3.12.1",
     "@ionic-native/keyboard": "^4.12.0",
     "@ionic-native/native-storage": "^4.7.0",
+    "@ionic-native/onesignal": "^5.5.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/lab": "^1.0.0",
@@ -41,6 +42,7 @@
     "ionic-angular": "^3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
+    "onesignal-cordova-plugin": "^2.4.7",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "ws": "^3.3.2",
@@ -75,7 +77,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "browser",
